<resources>
    <string name="app_name">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="first_activity">First Activity</string>

    <string name="theme_personalization">Theme Personalization</string>
    <string name="choose_theme">Choose Theme:</string>
    <string name="select_theme">Select a theme for the application.</string>
    <string name="key_theme">key_theme</string>

    <string name="text_size">Text Size</string>
    <string name="choose_text_size">Choose Text Size</string>
    <string name="select_text_size">Select the text size for this application.</string>
    <string name="key_text">key_text</string>

    <string name="key_push">key_push</string>
    <string name="key_sms">key_sms</string>
    <string name="key_email">key_email</string>
    <string name="push_notifs">Push Notifications</string>
    <string name="sms_notifs">SMS Notifications</string>
    <string name="email_notifs">Email Notifications</string>

    <string name="describe_issue">Describe the problem here.</string>
    <string name="key_issue">key_issue</string>
    <string name="submit_issue">Submit any issues you have encountered while using this app.</string>
    <string name="report_issue">Report an Issue</string>


    <string-array name="theme_options">
        <item>Light Theme</item>
        <item>Dark Theme</item>
    </string-array>

    <string-array name="theme_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="text_options">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="text_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>