<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.homepage.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard" />

    <activity
        android:id="@+id/nav_home"
        android:name="com.example.homepage.Home"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.homepage.ui.search.SearchFragment"
        android:label="@string/menu_search" />

    <activity
        android:id="@+id/nav_settings"
        android:name="com.example.homepage.ui.settings.Settings"
        android:label="@string/menu_settings" />

    <activity
        android:id="@+id/firstActivity"
        android:name="com.example.homepage.Activity1"
        android:label="@string/first_activity"
        tools:layout="@layout/activity_1" />
    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.homepage.ui.logout.Logout"
        android:label="@string/menu_logout"
        />



</navigation>